# eurochef

./: .gitignore  Cargo.toml  LICENSE  README.md  eurochef-gui.js  eurochef-gui_bg.wasm  eurochef.js  eurochef_bg.wasm  index.html
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: blender-addon.yml  check.yml  ci.yml  gh-pages.yml
assets/: spreadsheets_gforce.yml  spreadsheets_spyro.yml  triggers_gforce.txt  triggers_gforce.yml  triggers_robots.txt  triggers_robots.yml  triggers_spyro.txt  triggers_spyro.yml
blender_addon/: __init__.py  common.py  ecm.py  trigger_vis.py
blender_plugin/: __init__.py
docs/: texture_formats.md  vertex_layouts.md
eurochef/: Cargo.toml  index.html
eurochef-edb/: Cargo.toml
eurochef-edb/src/: anim.rs  array.rs  common.rs  edb.rs  entity.rs  entity_mesh.rs  error.rs  header.rs  lib.rs  map.rs  script.rs  text.rs  texture.rs  util.rs  versions.rs
eurochef-elx/: Cargo.toml
eurochef-elx/src/: compression.rs  lib.rs
eurochef-filelist/: Cargo.toml
eurochef-filelist/src/: lib.rs  path.rs  structures.rs  unified.rs  v4.rs  v5.rs  v9.rs
eurochef/cli/: Cargo.toml
eurochef/cli/src/: main.rs
eurochef/cli/src/edb/: animations.rs  entities.rs  gltf_export.rs  maps.rs  mod.rs  spreadsheets.rs  textures.rs
eurochef/cli/src/filelist/: create.rs  extract.rs  mod.rs
eurochef/gui/: Cargo.toml  build.rs  index.html  unused_strings.csv  unused_strings.txt
eurochef/gui/assets/: manifest.json  sw.js
eurochef/gui/assets/shaders/: entity.frag  entity.vert  grid.frag  grid.vert  pickbuffer.frag  pickbuffer.vert  select_cube.frag  select_cube.vert  sprite3d.frag  sprite3d.vert  trigger_link.frag  trigger_link.vert
eurochef/gui/src/: app.rs  entities.rs  entity_frame.rs  entity_renderer.rs  fileinfo.rs  gl_helper.rs  hashcodes.rs  lib.rs  main.rs  map_frame.rs  maps.rs  panic_dialog.rs  scripts.rs  spreadsheet.rs  textures.rs  web.rs
eurochef/gui/src/filesystem/: path.rs
eurochef/gui/src/render/: billboard.rs  blend.rs  camera.rs  entity.rs  gl_helper.rs  grid.rs  mod.rs  pickbuffer.rs  script.rs  shaders.rs  trigger.rs  tweeny.rs  viewer.rs
eurochef/shared/: Cargo.toml
eurochef/shared/src/: edb.rs  entities.rs  error.rs  hashcodes.rs  lib.rs  maps.rs  script.rs  spreadsheets.rs  textures.rs
eurochef/shared/src/filesystem/: mod.rs  path.rs
eurochef/shared/src/platform/: mod.rs
eurochef/shared/src/platform/texture/: gx.rs  mod.rs  pc.rs  ps2.rs  xbox.rs  xenon.rs
eurochef/src/: lib.rs  main.rs
eurochef/src/cli/: main.rs
eurochef/src/cli/edb/: entities.rs  mod.rs  spreadsheets.rs  textures.rs
eurochef/src/cli/platform/: mod.rs
eurochef/src/cli/platform/texture/: pc.rs  xbox.rs
eurochef/src/edb/: entities.rs  gltf_export.rs  mod.rs  spreadsheets.rs  textures.rs
eurochef/src/filelist/: create.rs  extract.rs  mod.rs
eurochef/src/gui/: app.rs  main.rs  mod.rs
eurochef/src/platform/texture/: gx.rs  mod.rs  pc.rs  xbox.rs
