[package]
name = "eurochef"
version = "0.1.0"
edition = "2021"

[dependencies]
eurochef-edb = { path = "../eurochef-edb" }
eurochef-elx = { path = "../eurochef-elx" }
eurochef-filelist = { path = "../eurochef-filelist" }

anyhow = "1"
base64 = "0.21.0"
bytemuck = { version = "1.13", features = ["derive"] }
clap = { version = "4.1", features = ["derive", "color"] }
clap-num = "1"
enumn = "0.1"
image = "0.24"
indicatif = "0.17.3"
glob = "0.3"
gltf = { version = "1.1.0", default-features = false }
pathdiff = "0.2.1"
qoi = "0.4.1"
serde_json = "1"
squish = "1.0"
walkdir = "2.3"