[package]
name = "eurochef"
version = "0.1.0"
authors = ["cohaereo <cohaereo@protonmail.com>"]
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "eurochef-cli"
path = "src/cli/main.rs"

[[bin]]
name = "eurochef"
path = "src/gui/main.rs"

[dependencies]
eurochef-edb = { path = "../eurochef-edb" }
# eurochef-elx = { path = "../eurochef-elx" }
eurochef-filelist = { path = "../eurochef-filelist" }

anyhow = "1"
base64 = "0.21.0"
bytemuck = { version = "1.13", features = ["derive"] }
clap = { version = "4.1", features = ["derive", "color"] }
clap-num = "1"
enumn = "0.1"
indicatif = "0.17.3"
image = { version = "0.24", default-features = false, features = ["png", "tga"] }
glob = "0.3"
gltf = { version = "1.1.0", default-features = false, features = ["names"] }
pathdiff = "0.2.1"
qoi = "0.4.1"
serde_json = "1"
squish = "1.0"
walkdir = "2.3"

# GUI
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"