[package]
name = "eurochef-cli"
version = "0.1.0"
authors = ["cohaereo <cohaereo@protonmail.com>"]
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "eurochef-cli"
path = "src/main.rs"

[dependencies]
eurochef-edb = { path = "../../eurochef-edb" }
eurochef-filelist = { path = "../../eurochef-filelist" }
eurochef-shared = { path = "../shared" }

anyhow = { version = "1", features = ["backtrace"] }
base64 = "0.21.0"
bytemuck = { version = "1.13", features = ["derive"] }
clap = { version = "4.1", features = ["derive", "color"] }
clap-num = "1"
enumn = "0.1"
indicatif = "0.17.3"
image = { version = "0.24.5", default-features = false, features = [
    "png",
    "tga",
] }
glob = "0.3"
gltf = { version = "1.4.0", default-features = false, features = [
    "names",
    "KHR_materials_pbrSpecularGlossiness",
] }
pathdiff = "0.2.1"
qoi = "0.4.1"
serde_json = "1"
tracing = "0.1.37"
walkdir = "2.3"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
apng = "0.3.1"
serde = "1.0.160"
parse_int = "0.6.0"
serde_yaml = "0.9.21"
hex = "0.4.3"
