[package]
name = "eurochef-gui"
version = "0.1.0"
authors = ["cohaereo <cohaereo@protonmail.com>"]
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "eurochef"
path = "src/main.rs"

[dependencies]
eurochef-edb = { path = "../../eurochef-edb" }
eurochef-filelist = { path = "../../eurochef-filelist" }
eurochef-shared = { path = "../shared" }

anyhow = { version = "1", features = ["backtrace"] }
bytemuck = { version = "1.13", features = ["derive"] }
serde_json = "1"
tracing = "0.1.37"

# GUI
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts",
    "glow",
] }
fnv = "1.0"
instant = "0.1"
# rfd = "0.11.2"
color-eyre = "0.6.2"
nfd = "0.0.4"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
stdweb = { git = "https://github.com/cohaereo/stdweb-fix" }
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
