[package]
name = "eurochef-gui"
version = "0.1.0"
authors = ["cohaereo <cohaereo@protonmail.com>"]
edition = "2021"
rust-version = "1.65"

[[bin]]
name = "eurochef"
path = "src/main.rs"

[dependencies]
eurochef-edb = { path = "../../eurochef-edb" }
eurochef-filelist = { path = "../../eurochef-filelist" }
eurochef-shared = { path = "../shared" }

anyhow = { version = "1", features = ["backtrace"] }
bytemuck = { version = "1.13", features = ["derive"] }
serde_json = "1"
tracing = "0.1.37"

# GUI
egui = "0.21.0"
egui_extras = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
fnv = "1.0"
instant = "0.1"
rfd = "0.11.2" # TODO: Can this be replaced by native-dialog?
color-eyre = { version = "0.6.2", features = ["issue-url"] }
crossbeam = "0.8.2"
font-awesome = "0.2"
glow = "0.12"
egui_glow = "0.21.0"
glam = "0.24.0"
chrono = "0.4.26"
png = "0.17.9"
serde_yaml = "0.9"
parse_int = "0.6.0"
nohash-hasher = "0.2.0"
clap = "4.3.4"
fxhash = "0.2.1"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
native-dialog = "0.6.3"
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
