[package]
name = "eurochef-shared"
version = "0.1.0"
authors = ["cohaereo <cohaereo@protonmail.com>"]
edition = "2021"
rust-version = "1.65"

[dependencies]
eurochef-edb = { path = "../../eurochef-edb" }
eurochef-filelist = { path = "../../eurochef-filelist" }

anyhow = { version = "1", features = ["backtrace"] }
bytemuck = { version = "1.13", features = ["derive"] }
enumn = "0.1"
image = { version = "0.24", default-features = false, features = ["png", "tga"] }
serde = { version =  "1", features = ["derive"] }
serde_yaml = "0.9"
squish = "1.0"
tracing = "0.1.37"
bitflags = "2.3.1"
